--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "html2canvas": "^1.0.0-rc.7",
     "http-proxy-middleware": "^2.0.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
