--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "html2canvas": "^1.0.0-rc.7",
-    "http-proxy-middleware": "^2.0.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-material-ui-form-validator": "^2.1.4",
-    "react-qr-code": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
